<resources>
    <string name="app_name">Musikale</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="song_name">Song Name</string>
    <string name="artist">Artist</string>
    <string name="_4_28">4:28</string>
    <string name="todo">TODO</string>
    <string name="_1_28">1:28</string>

    <string name="now_playing">Now Playing</string>

</resources>