<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPlayerActivity"
    android:background="@drawable/main_player"
    android:orientation="vertical"
    android:id="@+id/song_container">

    <RelativeLayout
        android:id="@+id/top_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/btn_bg"
        android:layout_alignParentTop="true"
        >

        <ImageView
            android:id="@+id/bck_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_chevron_left"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/aclonica"
            android:textSize="20sp"
            android:text="@string/now_playing"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_toStartOf="@+id/menu_btn"
            android:layout_toEndOf="@id/bck_btn"
            android:gravity="center_horizontal"
           />

        <ImageView
            android:id="@+id/menu_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_menu"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/todo" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/middle"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_below="@+id/top_btn"
        android:layout_marginTop="5dp"
        >

        <ImageView
            android:id="@+id/middle_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/song"
            android:scaleType="centerCrop"
            android:contentDescription="@string/todo" />
        <ImageView
            android:id="@+id/gradient"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/todo" />

    </RelativeLayout>
    <TextView
        android:id="@+id/song_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song_name"
        android:layout_below="@+id/middle"
        android:textColor="#FFFFFF"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/aclonica"
        android:singleLine="true"
        android:ellipsize="end"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

    <TextView
        android:id="@+id/artist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/artist"
        android:layout_below="@+id/song_name"
        android:textColor="#FFFFFF"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/aclonica"
        android:singleLine="true"
        android:ellipsize="end"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        />

    <RelativeLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/btn_bg">

        <ImageView
        android:id="@+id/shuffle"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_baseline_shuffle_24"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/prev"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_baseline_skip_previous"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/play_pause"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/todo" />





        <ImageView
            android:id="@+id/next"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_baseline_skip_next"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/play_pause"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/repeat"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_baseline_repeat_off"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/todo" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/play_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_play_arrow_24"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:focusable="true"

            android:clickable="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/btn_layout"
        android:id="@+id/seek_bar"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_28"
            android:id="@+id/duration"
            android:textColor="#ffffff"
            android:layout_marginStart="10dp"
            android:layout_alignParentStart="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_28"
            android:id="@+id/durationTotal"
            android:textColor="#ffffff"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"/>
        <androidx.appcompat.widget.AppCompatSeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentBottom="true"/>


    </RelativeLayout>



</RelativeLayout>